--- a/application/modules/default/views/scripts/blog/list.phtml
+++ b/application/modules/default/views/scripts/blog/list.phtml
@@ -1,44 +1,38 @@
-<div class="row">
-	<div class="col-md-9">
-		<?php foreach ( $this->data as $row ): ?>
-			<article>
-				<div class="page-header">
-					<h3 id="grid">
-						<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'view', 'id' => $row['blogId'] ), null, true ); ?>">
-							<?php echo $row['blogTitle'] ?>
-						</a>
-					</h3>
-				</div>
-				<p class="meta">Posted
-					<time datetime="2012-07-24" pubdate=""><?php echo $row['blogDate'] ?></time>
-					by
-					<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'author', 'id' => $row['adminId'] ), null, true ); ?>"
-					   title="Posts by <?php echo $row['adminFullName'] ?>" rel="author">
-						<?php echo $row['adminFullName'] ?>
-					</a>
-					<span class="amp">&amp;</span> filed under
-					<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'category', 'name' => $row['adminId'] ), null, true ); ?>"
-					   title="View all posts in <?php echo $row['adminId'] ?>"
-					   rel="category tag"><?php echo $row['adminId'] ?>
-					</a>.
-				</p>
-				<p>
-					<?php echo $row['blogContent'] ?>
-				</p>
+<article>
+	<div class="page-header">
+		<h3 id="grid">
+			<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'view', 'id' => $this->row['blogId'] ), null, true ); ?>">
+				<?php echo $this->row['blogTitle'] ?>
+			</a>
+		</h3>
+	</div>
+	<p class="meta"><?php echo $this->translate( 'posted' ) ?>
+		<time datetime="2012-07-24" pubdate=""><?php echo $this->row['blogDate'] ?></time>
+		<?php echo $this->translate( 'by' ) ?>
+		<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'author', 'id' => $this->row['adminId'] ), null, true ); ?>"
+		   title="Posts by <?php echo $this->row['adminFullName'] ?>" rel="author">
+			<?php echo $this->row['adminFullName'] ?>
+		</a>
+		<?php /*
+		<span class="amp">&amp;</span> filed under
+		<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'category', 'name' => $this->row['adminId'] ), null, true ); ?>"
+		   title="View all posts in <?php echo $this->row['adminId'] ?>"
+		   rel="category tag"><?php echo $this->row['adminId'] ?>
+		</a>.
+        */ ?>
+	</p>
 
-				<p class="tags">
-					<span class="tags-title">Tags:</span>
-					<?php $tags = explode( ',', $row['blogTag'] ); ?>
-					<?php foreach ( $tags as $tag ): ?>
-						<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'index', 'tag' => trim( $tag ) ), null, true ); ?>"
-						   rel="tag"
-						   class="label label-default"><?php echo trim( $tag ) ?></a>
-					<?php endforeach; ?>
-				</p>
-			</article>
+	<p>
+		<?php echo $this->row['blogContent'] ?>
+	</p>
+
+	<p class="tags">
+		<span class="tags-title">Tags:</span>
+		<?php $tags = explode( ',', $this->row['blogTag'] ); ?>
+		<?php foreach ( $tags as $tag ): ?>
+			<a href="<?php echo $this->url( array( 'controller' => 'blog', 'action' => 'index', 'tag' => trim( $tag ) ), null, true ); ?>"
+			   rel="tag"
+			   class="label label-default"><?php echo trim( $tag ) ?></a>
 		<?php endforeach; ?>
-	</div>
-	<div class="col-md-3">
-		content
-	</div>
-</div>
+	</p>
+</article>
