incluido sumario no blog

--- a/application/modules/default/views/scripts/blog/index.phtml
+++ b/application/modules/default/views/scripts/blog/index.phtml
@@ -10,6 +10,6 @@ $this->subtitle = "guitarprime";
 		<?php endforeach; ?>
 	</div>
 	<div class="col-md-3">
-		content
+		<?php echo $this->render( 'blog/sumary.phtml' ) ?>
 	</div>
 </div>
