--- a/application/modules/admin/views/scripts/layout/layout3/footer.phtml
+++ b/application/modules/admin/views/scripts/layout/layout3/footer.phtml
@@ -1,7 +1,7 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12" id="footerCopyright">GuitarPrime © 2013</div>
+			<div class="col-md-12" id="footerCopyright">GuitarPrime © <?php echo date('Y') ?></div>
 		</div>
 	</div>
 </footer>
