--- a/application/modules/default/views/scripts/layout/layout3/footer.phtml
+++ b/application/modules/default/views/scripts/layout/layout3/footer.phtml
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12" id="footerCopyright">GuitarPrime © 2013</div>
+			<div class="col-md-12" id="footerCopyright">GuitarPrime © <?php echo date('Y') ?></div>
 		</div>
 	</div>
 </footer>
