- incluido carousel no admin

--- a/application/modules/admin/views/scripts/layout/layout3/navbar.phtml
+++ b/application/modules/admin/views/scripts/layout/layout3/navbar.phtml
@@ -73,6 +73,11 @@ $action = Zend_Controller_Front::getInstance()->getRequest()->getActionName();
 								file
 							</a>
 						</li>
+						<li <?php echo ( $module == 'admin' && $controller == 'carousel' ) ? 'class="active"' : '' ?>>
+							<a href="<?php echo $this->url( array( 'module' => 'admin', 'controller' => 'carousel' ), null, true ); ?>">
+								carousel
+							</a>
+						</li>
 					</ul>
 				<li>
 					<a href="<?php echo $this->url( array( 'module' => 'admin', 'controller' => 'user', 'action' => 'logout' ), null, true ); ?>">
