--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -1,3 +1,5 @@
+<?php $this->carousel = $this->partial( 'layout/layout3/carousel.phtml' ); ?>
+
 <div class="row">
 	<div class="col-lg-6">
 		<div class="thumbnail">
