- incluido carousel no default

--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->carousel = $this->partial( 'layout/layout3/carousel.phtml' ); ?>
+<?php $this->carousel = $this->partial( 'layout/layout3/carousel.phtml', array( 'carousel' => $this->carousel ) ); ?>
 
 <div class="row">
 	<div class="col-lg-6">
