--- a/application/modules/default/views/scripts/layout/layout3/carousel.phtml
+++ b/application/modules/default/views/scripts/layout/layout3/carousel.phtml
@@ -1,57 +1,33 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	<!-- Indicators -->
 	<ol class="carousel-indicators">
-		<li data-target="#myCarousel" data-slide-to="0" class=""></li>
-		<li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-		<li data-target="#myCarousel" data-slide-to="2" class=""></li>
+		<?php $active = true; ?>
+		<?php for ( $i = 0; $i < sizeof( $this->carousel ); $i++ ): ?>
+			<li data-target="#myCarousel" data-slide-to="<?php echo $i ?>"
+			    class="<?php echo $active ? 'active' : '' ?>"></li>
+			<?php $active = false; ?>
+		<?php endfor; ?>
 	</ol>
 	<div class="carousel-inner">
-		<div class="item">
-			<img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide"
-			     src="<?php echo $this->baseUrl() . '/img/carousel/guitar1.jpg' ?>">
+		<?php $active = true; ?>
+		<?php foreach ( $this->carousel as $carousel ): ?>
+			<div class="item<?php echo $active ? ' active' : '' ?>">
+				<img alt="<?php echo $carousel['carouselTransTitle'] ?>"
+				     src="<?php echo $this->baseUrl( '/files/' . $carousel['fileType'] . '/' . $carousel['fileSrc'] ) ?>">
 
-			<div class="container">
-				<div class="carousel-caption">
-					<h1>Example headline.</h1>
+				<div class="container">
+					<div class="carousel-caption">
+						<h1><?php echo $carousel['carouselTransTitle'] ?></h1>
 
-					<p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous"
-						Glyphicon buttons on the left and right might not load/display properly due to web browser
-						security rules.</p>
+						<p><?php echo $carousel['carouselTransDesc'] ?></p>
 
-					<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+						<p><a class="btn btn-lg btn-primary" href="<?php echo $carousel['carouselUrl'] ?>"
+						      role="button"><?php echo $carousel['carouselTransBtn'] ?></a></p>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="item active">
-			<img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="Second slide"
-			     src="<?php echo $this->baseUrl() . '/img/carousel/guitar2.jpg' ?>">
-
-			<div class="container">
-				<div class="carousel-caption">
-					<h1>Another example headline.</h1>
-
-					<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-						at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-
-					<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="Third slide"
-			     src="<?php echo $this->baseUrl() . '/img/carousel/guitar3.jpg' ?>">
-
-			<div class="container">
-				<div class="carousel-caption">
-					<h1>One more for good measure.</h1>
-
-					<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-						at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-
-					<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-				</div>
-			</div>
-		</div>
+			<?php $active = false; ?>
+		<?php endforeach; ?>
 	</div>
 	<a class="left carousel-control" href="#myCarousel" data-slide="prev"><span
 			class="glyphicon glyphicon-chevron-left"></span></a>
